--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "test": "vitest",
     "build": "next build",
     "start": "next start",
+    "refresh-cache": "node scripts/refresh-team-cache.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,7 +17,10 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
-    "lucide-react": "^0.300.0"
+    "lucide-react": "^0.300.0",
+    "node-cron": "^3.0.2",
+    "ioredis": "^5.3.1",
+    "cheerio": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -24,6 +29,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.0"
   }
 }
