--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lucide-react": "^0.300.0",
     "node-cron": "^3.0.2",
     "ioredis": "^5.3.1",
-    "cheerio": "^1.0.1"
+    "cheerio": "^1.0.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
