Fix TypeScript compilation: add target es2015 and convert Set to Array for iteration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "target": "es2015",
+    "downlevelIteration": true,
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
